# jwst_lib.models

./: CHANGES  README  convert_schema.py  schema_to_yaml.py  setup.cfg  setup.py
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
doc/source/devel/: attributes.rst  index.rst  metadata.rst  models.rst  new_model.rst  schema_human.rst  schema_json.rst  schema_yaml.rst
examples/custom_model/: setup.py
examples/custom_model/lib/: bad_pixel_mask.py
jwst_lib/: __init__.py  py3k_compat.py
jwst_lib/models/: __init__.py  amilg.py  arrays.py  asn.py  contrast.py  cube.py  dark.py  doc.py  dqflags.py  drizpars.py  drizproduct.py  dynamicdq.py  extensions.py  filter.py  fits.py  fits_support.py  flat.py  fringe.py  gain.py  gls_rampfit.py  image.py  ipc.py  json_yaml.py  lastframe.py  linearity.py  mask.py  miri_ramp.py  model_base.py  multislit.py  multispec.py  photom.py  photom_b4.py  pixelarea.py  properties.py  ramp.py  rampfitoutput.py  readnoise.py  reset.py  saturation.py  schema.py  (+6 more)
jwst_lib/models/schemas/: amilg.schema.json  amilg.schema.yaml  asn.schema.json  combinedspec.schema.json  contrast.schema.json  core.schema.json  core.schema.yaml  cube.schema.json  cube.schema.yaml  dark.schema.json  dark.schema.yaml  dq_def.schema.json  drizpars.schema.json  drizproduct.schema.json  drizproduct.schema.yaml  extract1d.schema.json  filter.schema.json  flat.schema.json  flat.schema.yaml  fringe.schema.json  gain.schema.json  gain.schema.yaml  gls_rampfit.schema.json  gls_rampfit.schema.yaml  image.schema.json  image.schema.yaml  ipc.schema.json  (+58 more)
(+16 files in other folders)
