[metadata]
name = jwst_lib.models
version = 1.0
author = STScI
author-email = help@stsci.edu
home-page =
requires-python = >=2.6
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-dist =
    d2to1
    setuptools
    stsci.distutils
    astropy (>=0.3)
    numpy (>=1.5.1)
    pyasdf

[files]
packages =
    jwst_lib
    jwst_lib.models
    jwst_lib.models.tests
package_data =
    jwst_lib.models = schemas/*.schema.yaml
    jwst_lib.models = metaschema/*.yaml
    jwst_lib.models.tests = *.fits *.yaml

[global]
setup_hooks =
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook
